--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
       <div class="intro-text-container">
 
-        <p>The purpose of this blog is to share a bit about my journey in the game development space, some of the hurdles I had to cross and my pivot towards a career in software development. Near the end I would like to end it on some cool VR stuff since this is where my true interests lie and is probably a bit more interesting to hear about than my personal life, but you can be the judge of that.</p>
+        <p>The purpose of this blog is to share a bit about my journey in the game development space, some of the hurdles I had to cross and my pivot towards a career in software development. Near the end I would like to end it on some cool VR stuff since this is where my true interests lie and is probably a bit more interesting to hear about than my personal life, but you can be the judge of that. End Scene.</p>
 
       </div>
 
