--- a/index.html
+++ b/index.html
@@ -4,42 +4,55 @@
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 	<title>Dmitry Popovichev - Hobby Page</title>
 	<link rel="stylesheet" href="css/main.css">
   <link rel="stylesheet" href="css/reset.css">
+  <link rel="stylesheet" href="css/hobby-page.css">
 
   </head>
   <body>
     
-
-    <div class="container">
-      <img class="main-img" src="img/Header Image.jpg" alt="3D modelled Futuristic Market Scene">
-      <div class="centered">Welcome Everyone</div>
-    </div>
-
-
     <header class="main-hder">
-      <nav class="nav-home">
-        <p>Home</p>
-      </nav>
-      <nav class="nav-hobbypage">
-        <p>Hobby Page</p>
-      </nav>
-      <nav class="nav-contact">
-        <p>Contact</p>
-      </nav>
+      <div class="navigation" style="position: relative; left: 500px;">
+        <nav class="nav-home"><p>Home</p></nav>
+        <nav class="nav-hobbypage"><p>Hobby Page</p></nav>
+        <nav class="nav-contact"><p>Contact</p></nav>
+      </div>
     </header>
 
-    <div class="intro-container">
+    <div class="hder-img-container">
+      <div class="welcome-txt">Welcome Everyone</div>
+    </div>
 
+    <div class="intro-container" style="position: relative; top: -80px;">
+
+      <div><p class="body-title">Game Development and Virtual Reality</p></div>
       <div class="intro-img"></div>
-
-      <div class="intro-text-container">
-
-        <p>The purpose of this blog is to share a bit about my journey in the game development space, some of the hurdles I had to cross and my pivot towards a career in software development. Near the end I would like to end it on some cool VR stuff since this is where my true interests lie and is probably a bit more interesting to hear about than my personal life, but you can be the judge of that. End Scene.</p>
-
+      <div class="text-container">
+        <p>The purpose of this blog is to share a bit about my journey in the game development space, some of the hurdles I had to cross and my pivot towards a career in software development. Near the end I would like to end it on some cool VR stuff since this is where my true interests lie and is probably a bit more interesting to hear about than my personal life, but you can be the judge of that.</p>
       </div>
+      <div class="text-container">
+        <p>I’ll start off by telling you a brief history of game development journey so far. I started by completing my Graphic Design degree just as Covid hit, which was a challenge to say the least. I made it more difficult for myself by reaching way outside of my comfort zone and doing my final year project around the VR industry. My project ended up being a showcase of a learning experience in Virtual Reality for students studying STEM subjects at GCSE level, in particular Chemistry. </p>
+      </div>
+    </div>
 
+    <div class="folio-container snaps-inline">
+        <nav class="child"><img class="child-img" src="img/Teleport_Thumbnail.png" alt="Screenshot of a VFX teleport swirl"></nav>
+        <nav class="child"><img class="child-img" src="img/Teleport_Thumbnail.png" alt="Screenshot of a VFX teleport swirl"></nav>
+        <nav class="child"><img class="child-img" src="img/Teleport_Thumbnail.png" alt="Screenshot of a VFX teleport swirl"></nav>
+        <nav class="child"><img class="child-img" src="img/Teleport_Thumbnail.png" alt="Screenshot of a VFX teleport swirl"></nav>
+        <nav class="child"><img class="child-img" src="img/Teleport_Thumbnail.png" alt="Screenshot of a VFX teleport swirl"></nav>
+        <nav class="child"><img class="child-img" src="img/Teleport_Thumbnail.png" alt="Screenshot of a VFX teleport swirl"></nav>
+    </div>
+
+    <div class="body-container">
+      <div class="text-container">
+        <p>Without going to much into depth, to accomplish this project I had learn Blender, a 3D modelling program, Substance Painter, a procedural texturing program, animation, rigging, texturing and basically a basic understanding of game development in a very short amount of time. Now I can’t say I didn’t like the challenge, but boy was there a lot of work to be done. Nether the less I pursed and achieved a very desirable outcome.</p>
+      </div>
+      <div class="text-container">
+        <p>From there I got a small job at a small VR indie studio where I furthered my skills but ultimately never released anything since Covid had a big impact on the business’s financial situation and eventually had to shut down the project and company all together, which was unfortunate, but such is the way of life sometimes.</p>
+      </div>
     </div>
 
     <div class="temp-spacer"></div>
