Worked on re-doing the whole page to better fit the project brief

--- a/index.html
+++ b/index.html
@@ -29,11 +29,25 @@
 
       <div><p class="body-title">Game Development and Virtual Reality</p></div>
       <div class="intro-img"></div>
+      <div class="spacer"></div>
       <div class="text-container">
-        <p>The purpose of this blog is to share a bit about my journey in the game development space, some of the hurdles I had to cross and my pivot towards a career in software development. Near the end I would like to end it on some cool VR stuff since this is where my true interests lie and is probably a bit more interesting to hear about than my personal life, but you can be the judge of that.</p>
+        <p>The purpose of this blog is to share a bit about my hobby of game development, I will share the three main projects I have done over the past three years, some of the hurdles and problems I had to face and where I’m looking to in the future. I’ve added a small list below containing the names of the three.</p>
       </div>
+
+      <div class="spacer"></div>
+
       <div class="text-container">
-        <p>I’ll start off by telling you a brief history of game development journey so far. I started by completing my Graphic Design degree just as Covid hit, which was a challenge to say the least. I made it more difficult for myself by reaching way outside of my comfort zone and doing my final year project around the VR industry. My project ended up being a showcase of a learning experience in Virtual Reality for students studying STEM subjects at GCSE level, in particular Chemistry. </p>
+        <ul>
+          <li>Virion - Prototype</li>
+          <li>Arctic Horror</li>
+          <li>Clearing Space</li>
+        </ul>
+      </div>
+
+      <div class="spacer"></div>
+
+      <div class="text-container">
+        <p>Without going to deep into my history, I decided to try a bit of game development after finishing my university degree. I finished my degree in Graphic Design, so I was a bit out of my comfort zone but my passion for gaming meant that it was easy to get started with and I enjoyed putting my time and effort into making games. I mainly focused on the design aspects of game development at first, such as 3D modelling, unwrapping, texturing, lighting, UI design, marketing and environment design but later on started to learn how to programme and assisted with the simpler tasks when it came to code. </p>
       </div>
     </div>
 
@@ -41,21 +55,52 @@
         <nav class="child"><img class="child-img" src="img/Teleport_Thumbnail.png" alt="Screenshot of a VFX teleport swirl"></nav>
         <nav class="child"><img class="child-img" src="img/Teleport_Thumbnail.png" alt="Screenshot of a VFX teleport swirl"></nav>
         <nav class="child"><img class="child-img" src="img/Teleport_Thumbnail.png" alt="Screenshot of a VFX teleport swirl"></nav>
-        <nav class="child"><img class="child-img" src="img/Teleport_Thumbnail.png" alt="Screenshot of a VFX teleport swirl"></nav>
-        <nav class="child"><img class="child-img" src="img/Teleport_Thumbnail.png" alt="Screenshot of a VFX teleport swirl"></nav>
-        <nav class="child"><img class="child-img" src="img/Teleport_Thumbnail.png" alt="Screenshot of a VFX teleport swirl"></nav>
     </div>
 
     <div class="body-container">
       <div class="text-container">
-        <p>Without going to much into depth, to accomplish this project I had learn Blender, a 3D modelling program, Substance Painter, a procedural texturing program, animation, rigging, texturing and basically a basic understanding of game development in a very short amount of time. Now I can’t say I didn’t like the challenge, but boy was there a lot of work to be done. Nether the less I pursed and achieved a very desirable outcome.</p>
+        <p>I first joined a small indie studio in Derby just as Covid hit the world where we were trying to develop a small FPS VR title for the gaming lounge attached to the studio. Development was tricky since we were all stuck at home and had little experience working outside of the office at the time. Eventually we had to cancel the project as funding was becoming difficult, resulting in the lounge/studio going out of business.</p>
       </div>
+      <div class="spacer"></div>
       <div class="text-container">
-        <p>From there I got a small job at a small VR indie studio where I furthered my skills but ultimately never released anything since Covid had a big impact on the business’s financial situation and eventually had to shut down the project and company all together, which was unfortunate, but such is the way of life sometimes.</p>
+        <p>Enjoying my time nevertheless, me and the programmer who soon became friends, set on to try create our own game in our free time. Our first attempt was Virion – Prototype which can be found on itch.io following that link. The game was made in Unreal Engine 4 where the player plays as a virus trying to infect it’s host. It was an RTS style game that was going to be super difficult to beat, since in real life most viruses don’t tend to survive. The game became a prototype of a game since we came to realise after about a year and a half that we over-scoped for just to two of us (plus two friends that helped here and there). We did what we could, got the game to a playable state and released it to the world and learnt as much as we could before moving onto the next project.</p>
+      </div>
+      <div class="spacer"></div>
+      <div class="iframe-container">
+        <iframe width="960" src="https://www.youtube.com/embed/DRPM_idhfUQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+      </div>
+      <div class="spacer"></div>
+      <div class="text-container">
+        <p>A little less to talk about for the second project, we wanted to create a VR game but again over scoped a little bit but definitely did a lot better and learnt from many of our previous mistakes. This time it only took 6 months to realise that this was not a feasible project while also using Unity as our engine, a much better fit for us. You can visit my ArtStation page for the project here, Arctic Horror, to see some of the progression and creation of the game.</p>
+      </div>
+      <div class="spacer"></div>
+      <div class="video-container">
+        <video src="video/Power Objective - 1080 Meme.mp4" width="1280" height="720" controls></video>
+      </div>
+      <div class="spacer"></div>
+      <div class="text-container">
+        <p>Lastly, the 3rd and current game, Clearing Space, a small casual idle clicker-esk mobile game currently in development for Android, with potential release for IOS in the future. In this game the player controls a spaceship that can mine debris located around Earth to bring back to the station and upgrade the ship or station itself. We scoped right down and decided to try our hands at developing a mobile game, less assets, less code (kinda), less work, much more manageable for just the two of us. Development is going well, in just 6 months we have almost created a minimal viable product and are well on our way to releasing the first version of the game in a couple of months (could already be released when you’re reading this). Because of the progress we have made we have had to learn much more that we did on the previous projects, such as UI design, audio, in-game economies and much more.</p>
+      </div>
+      <div class="spacer"></div>
+      <div class="img-container">
+        <img src="img/Station and Ship With Debris.jpg" alt="A stylised spacship next to a spacestation with debris next to both">
+      </div>
+      <div class="spacer"></div>
+      <div class="text-container">
+        <p>Doing all 3 projects has taught me a lot such as working with other developers and making sure we are all on the same page, we had a go at an agile development style, I practiced good design documentation and communication along with everything that comes with game development. I will most likely continue my hobby even if I move to a career in software development since it’s still something I enjoy doing in my free time when I’m not gaming, going out with friends or spending time with my partner but I would like to return to VR since this is where my true interests lie.</p>
       </div>
     </div>
+    <div class="spacer"></div>
 
-    <div class="temp-spacer"></div>
+    <footer class="footer">
+      <div class="social-container">
+        <nav class="linkedin-icon"></nav>
+        <nav class="artstation-icon"></nav>
+        <nav class="facebook-icon"></nav>
+        <nav class="instagram-icon"></nav>
+        <nav class="twitter-icon"></nav>
+      </div>
+    </footer>
 
   </body>
 
