Polish work, adding images, date and time using JavaScript and adding links

--- a/index.html
+++ b/index.html
@@ -9,12 +9,16 @@
 	<link rel="stylesheet" href="css/main.css">
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/hobby-page.css">
+  <script src="js/main.js" defer></script>
 
   </head>
   <body>
-    
+
+    <div class="datetime">
+      <p><span class="date" id="date-time"></span></p>
+    </div>
     <header class="main-hder">
-      <div class="navigation" style="position: relative; left: 500px;">
+      <div class="navigation" style="position: relative; left: 450px;">
         <nav class="nav-home"><p>Home</p></nav>
         <nav class="nav-hobbypage"><p>Hobby Page</p></nav>
         <nav class="nav-contact"><p>Contact</p></nav>
@@ -24,6 +28,8 @@
     <div class="hder-img-container">
       <div class="welcome-txt">Welcome Everyone</div>
     </div>
+
+    
 
     <div class="intro-container" style="position: relative; top: -80px;">
 
@@ -38,8 +44,8 @@
 
       <div class="text-container">
         <ul>
-          <li>Virion - Prototype</li>
-          <li>Arctic Horror</li>
+          <li><a href="https://darkschematicgames.itch.io/virion-prototype">Virion - Prototype</a></li>
+          <li><a href="https://www.artstation.com/artwork/4XxgPl">Arctic Horror</a></li>
           <li>Clearing Space</li>
         </ul>
       </div>
@@ -52,9 +58,9 @@
     </div>
 
     <div class="folio-container snaps-inline">
-        <nav class="child"><img class="child-img" src="img/Teleport_Thumbnail.png" alt="Screenshot of a VFX teleport swirl"></nav>
-        <nav class="child"><img class="child-img" src="img/Teleport_Thumbnail.png" alt="Screenshot of a VFX teleport swirl"></nav>
-        <nav class="child"><img class="child-img" src="img/Teleport_Thumbnail.png" alt="Screenshot of a VFX teleport swirl"></nav>
+        <nav class="child"><a href="https://darkschematicgames.itch.io/virion-prototype"><img class="child-img" src="img/Virion Screenshot.png" alt="Screenshot of some stylised cells"></a></nav>
+        <nav class="child"><a href="https://www.artstation.com/artwork/4XxgPl"> <img class="child-img" src="img/AH - The Outpost-01.png" alt="A greybox style arctic outpost"></a></nav>
+        <nav class="child"><img class="child-img" src="img/Station and Ship With Debris.jpg" alt="Stylised space ship next to spacestation and debris"></nav>
     </div>
 
     <div class="body-container">
