correcting the letsconnect image reference

--- a/contant.html
+++ b/contant.html
@@ -32,7 +32,7 @@
   <div class="contactFormContainer" id="contactFormContainer">
     <div class="contactFormBox">
         <form>
-            <div class="letsconnect"><img src="/img/Contact.png" alt="handwritten let's connect text"></div>
+            <div class="letsconnect"><img src="img/Contact.png" alt="handwritten let's connect text"></div>
             <h3>GET IN TOUCH</h3>
             <br>
             <div>
